Made the beta-warning banner animated like stack-overflow, it's more eye catching now which is the point of it. It's position: fixed so it's floating on top of the content

--- a/styles/home.css
+++ b/styles/home.css
@@ -81,12 +81,18 @@ complimentary greens: 9FB553	7B8851	61761B	C6DA82	CCDA99
     background: #e2d8ed;
     border-bottom: solid 2px #C3ADD9;
     display: none;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 100;
 }
 
 #beta-warning {
     margin: 0 auto;
     padding: 0.3em;
     width: 960px;
+    display: none;
 }
 
 #beta-warning .blurb {
@@ -94,6 +100,7 @@ complimentary greens: 9FB553	7B8851	61761B	C6DA82	CCDA99
     line-height: 1.65em;
     vertical-align: middle;
     color: #444;
+    display: none;
 }
 
 #beta-warning-close {
